<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_user_Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adduser"
        android:background="@color/login_button_background"
        android:textColor="@color/userdetails"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usename"
            android:id="@+id/username_emp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/password_emp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:id="@+id/mobile"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:id="@+id/full_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_id"
            android:id="@+id/areaid" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register"
            android:textColorHint="@color/userdetails"
            android:background="@color/login_button_background"
            android:id="@+id/btn_adduser"/>

        <Button
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:background="@color/login_button_background"
            android:hint="back"
            android:textColorHint="@color/userdetails" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>